[swagger] : add https request